--- a/aboutme.html
+++ b/aboutme.html
@@ -1,45 +1,72 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>AboutMe</title>
+		<title>Navruzbek</title>
 		<meta charset= "UTF-8">
+		<link rel="stylesheet" type="text/css" href="Styles/aboutme-style.css"
 	</head>
-	<body style= "background-color:yellow">
-	<h1>NAVRUZBEK NORALIEV DILSHODBEK O'G'LI</h1>
-	<p> Curious, creative and stubborn man from the Mars. Goal: <strong>"to create BIXBI"</strong> <p>
-	<h2> Currently studying subjects at IUT: </h2>
-	<ul>
-	<li>Academic English;</li>
-	<li>Basic Korean;</li>
-	<li>Engineering Mathematics;</li>
-	<li>Internet Programming;</li>
-	<li>System Programming;</li>
-	<li>New History of Uzbekistan;</li>
-	<li>Circuit;</li>
-	<li>Computer Architecture;</li>
-	<h3 style= "color:blue">3 Top Favorite Movies:</h3>
-	<img src="Pic/shumbola.jpg" alt="Shumbola" width="320" height="445">
-	<p>Shumbola is one of the greates movies that's been shot in 90s</p>
-	
-		<img src="Pic/abdullajon.jpg" alt="abdullajon" width="320" height="445">
-	<p>Abdullajon is one of the greatest movies</p>
-	
-		<img src="Pic/osmondagi.webp" alt="Osmondagi_bolalar" >
-	<p>Osmondagi bolalar is one of the greates movies that teaches friendship</p>
-	<p>to watch this movie press <a href="http://mytube.uz/tracks/379429.htm">here</a></p>
-	
+	<body>
+	<h1 class="color">ABOUT NAVRUZBEK NORALIEV</h1>
+	<p> Curious, creative and stubborn man from the Mars. Goal: <strong>" Create a billion dollar company."</strong> </p>
+	<hr>
+	<h2 class="color"> 4th Semester subjects at IUT: </h2>
+		<p>	
+			<li>Academic English;</li>
+			<li>Basic Korean;</li>
+			<li>Engineering Mathematics;</li>
+			<li>Internet Programming;</li>
+			<li>System Programming;</li>
+			<li>New History of Uzbekistan;</li>
+			<li>Circuit;</li>
+			<li>Computer Architecture;</li>
+			
+		</p>
+<h2>My Favorite Movies:</h2>
+	<div class ="gallery">
+	    <a target="_blank" href="http://www.imdb.com/title/tt3659388/">
+		<img src="Pic/theMartian.jpg" alt="Martian" width="400" height="600">
+		</a>
+		<p>The Martian <a href "http://www.imdb.com/title/tt3659388/">IMDB</a></p>
+	</div>
+	<div class ="gallery">
+	<a target="_blank" href="http://www.imdb.com/title/tt0111161/">
+		<img src="Pic/shawshank.jpg" alt="the shawshank redemption" width="400" height="600">
+		</a>
+		<p>The Shawshank Redemption <a href "http://www.imdb.com/title/tt0111161/">IMDB</a></p>
+	</div>
+	<div class ="gallery">
+	<a target="_blank" href="http://www.imdb.com/title/tt0454921/">
+		<img src="Pic/happyness.jpg" alt="the pursuit of happiness" width="400" height="600">
+		</a>
+	<p>The Pursuit of happiness <a href "http://www.imdb.com/title/tt0454921/">IMDB</a></p>
+	</div>
+<div class ="just">
+	<h2>My Moods</h2>
+</div>
+	<div class = "moods">
 	<p>When I'm happy</p>
-	<img src="Pic/happy.jpg" alt="happy" >
+	<img src="Pic/happy.svg" alt="happy" width="400" height="400" >
+	</div>
+	<div class = "moods">
 	<p>When I am sad</p>
-	<img src="Pic/sad.jpg" alt="sad">
-	<p>to my right FAzliddination </p>
-		<img src="Pic/Fazli.bmp" alt="sad">
-	<p>to my left KhojiAkbar </p>
-		<img src="Pic/KhojiAkbar.jpg" alt="sad">
-	
-	
-	</body>
+	<img src="Pic/sad.svg" alt="sad" width="400" height="400">
+</div>
 
+<div class="paragraph">
+	<h2 class="color">Fun Facts About My Neighbors</h2>
+			<p>
+			<li><em>Fazliddin Zokirov:</em>  meticulous is the word that describes him best.
+			<li><em>Nodirbek Nabiev: loves debates.</em>
+			<li><em>Nazrulla Sadullayev: easygoing and affable.</em>  
+			</p>
+	</div>
+
+	</body>
+	<div  class = "just">
+	<footer>
+	<img src="Pic/w3c.png" alt="Sertification Approval" width="100px"> 
+	<img src="Pic/w3c2.png" alt="Sertification Approval" width="100px">
+	</footer>
+	<div>
 
 </html>
-# lab-1-Navy97
